Fix alignment

--- a/www/jtracker/core/css/jtracker.css
+++ b/www/jtracker/core/css/jtracker.css
@@ -201,7 +201,7 @@ li.lang-select .caret {
 }
 
 li.lang-select #lang-switcher {
-    padding: 8px 0;
+    padding: 10px 0;
     cursor: pointer;
 }
 
